Add i18n translations for minimum withdrawal notices

--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -133,6 +133,10 @@
     "referralWarning": "Il prelievo referral preleva SOLO il saldo delle commissioni referral. I tuoi fondi personali (disponibile, profitti bloccati, investimenti) rimangono intatti.",
     "loadingData": "Caricamento dati prelievo...",
     "loadingReferralData": "Caricamento dati referral...",
+    "minimumNotice": "Limite Minimo di Prelievo:",
+    "minimumAmount": "50 USDT netti (dopo tassa 20%)",
+    "minimumGross": "Importo lordo richiesto: circa 62.5 USDT",
+    "belowMinimum": "(< 50 minimo)",
     "confirmMessage": "⚠️ Conferma Prelievo\n\nImporto Lordo: {gross} USDT\nTassa (20%): -{tax} USDT\n━━━━━━━━━━━━━━━━━━\nImporto Netto: {net} USDT\n\nTutti i tuoi saldi verranno azzerati.\nVuoi procedere?",
     "confirmReferralMessage": "⚠️ Conferma Prelievo Referral\n\nImporto Lordo: {gross} USDT\nTassa (20%): -{tax} USDT\n━━━━━━━━━━━━━━━━━━\nImporto Netto: {net} USDT\n\nIl tuo saldo referral verrà azzerato.\nVuoi procedere?",
     "successMessage": "✅ Richiesta di Prelievo Creata!\n\nLordo: {gross} USDT\nTassa (20%): -{tax} USDT\nNetto: {net} USDT\n\nI fondi saranno inviati al tuo wallet.",
