Add English and Spanish translations for minimum withdrawal notices

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -133,6 +133,10 @@
     "referralWarning": "Referral withdrawal withdraws ONLY the referral commission balance. Your personal funds (available, locked profits, investments) remain intact.",
     "loadingData": "Loading withdrawal data...",
     "loadingReferralData": "Loading referral data...",
+    "minimumNotice": "Minimum Withdrawal Limit:",
+    "minimumAmount": "50 USDT net (after 20% tax)",
+    "minimumGross": "Gross amount required: approximately 62.5 USDT",
+    "belowMinimum": "(< 50 minimum)",
     "confirmMessage": "⚠️ Confirm Withdrawal\n\nGross Amount: {gross} USDT\nTax (20%): -{tax} USDT\n━━━━━━━━━━━━━━━━━━\nNet Amount: {net} USDT\n\nAll your balances will be reset.\nDo you want to proceed?",
     "confirmReferralMessage": "⚠️ Confirm Referral Withdrawal\n\nGross Amount: {gross} USDT\nTax (20%): -{tax} USDT\n━━━━━━━━━━━━━━━━━━\nNet Amount: {net} USDT\n\nYour referral balance will be reset.\nDo you want to proceed?",
     "successMessage": "✅ Withdrawal Request Created!\n\nGross: {gross} USDT\nTax (20%): -{tax} USDT\nNet: {net} USDT\n\nFunds will be sent to your wallet.",
