--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -133,6 +133,10 @@
     "referralWarning": "El retiro de referidos retira SOLO el saldo de comisiones de referidos. Tus fondos personales (disponible, ganancias bloqueadas, inversiones) permanecen intactos.",
     "loadingData": "Cargando datos de retiro...",
     "loadingReferralData": "Cargando datos de referidos...",
+    "minimumNotice": "Límite Mínimo de Retiro:",
+    "minimumAmount": "50 USDT netos (después del 20% de impuesto)",
+    "minimumGross": "Monto bruto requerido: aproximadamente 62.5 USDT",
+    "belowMinimum": "(< 50 mínimo)",
     "confirmMessage": "⚠️ Confirmar Retiro\n\nMonto Bruto: {gross} USDT\nImpuesto (20%): -{tax} USDT\n━━━━━━━━━━━━━━━━━━\nMonto Neto: {net} USDT\n\nTodos tus saldos se resetearán.\n¿Quieres continuar?",
     "confirmReferralMessage": "⚠️ Confirmar Retiro de Referidos\n\nMonto Bruto: {gross} USDT\nImpuesto (20%): -{tax} USDT\n━━━━━━━━━━━━━━━━━━\nMonto Neto: {net} USDT\n\nTu saldo de referidos se reseteará.\n¿Quieres continuar?",
     "successMessage": "✅ ¡Solicitud de Retiro Creada!\n\nBruto: {gross} USDT\nImpuesto (20%): -{tax} USDT\nNeto: {net} USDT\n\nLos fondos se enviarán a tu billetera.",
