Fix Starter button insufficient balance message (50 USDT)
- Added insufficientBalanceStarter translation key to IT/EN/ES
- Updated InvestmentForm to use specific message for Starter package
- Starter now shows 'min 50 USDT' instead of 'min 100 USDT'

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -100,6 +100,7 @@
     "days": "días",
     "creating": "Creando...",
     "insufficientBalance": "Saldo insuficiente (mín 100 USDT)",
+    "insufficientBalanceStarter": "Saldo insuficiente (mín 50 USDT)",
     "stake100": "Hacer Staking de 100 USDT",
     "missing": "Te faltan {amount} USDT para hacer staking",
     "stakingNumber": "Staking #{id}",
