--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -100,6 +100,7 @@
     "days": "days",
     "creating": "Creating...",
     "insufficientBalance": "Insufficient balance (min 100 USDT)",
+    "insufficientBalanceStarter": "Insufficient balance (min 50 USDT)",
     "stake100": "Stake 100 USDT",
     "missing": "You need {amount} USDT more to stake",
     "stakingNumber": "Staking #{id}",
